# AdventOfCode2023

./: README.md  pyproject.toml
day1/: part1.py  part2.py
day10/: part1.py  part2.py
day11/: part1.py  part2.py
day12/: part1.py  part2.py
day13/: part1.py  part2.py
day14/: part1.py  part2.py
day15/: part1.py  part2.py
day16/: part1.py  part2.py
day17/: part1-copy.py  part1-dijkstra.py  part1-printing.py  part1.py  test2_input.txt  test_2_input.txt  test_3_input.txt
day2/: part1.py  part2.py
day3/: part1.py  part2.py
day4/: part1.py  part2.py
day5/: part1.py  part2.py  test_part1.py  test_part2.py
day6/: part1.py  part2.py
day7/: part1.py  part2.py
day8/: part2.py
day9/: part1.py  part2.py
template/: part1.py  part2.py
