[tool.poetry]
name = "adventofcode2023"
version = "0.1.0"
description = ""
authors = ["Łukasz Kuk <lukasz010420@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
regex = "2023.10.3"
numpy = "1.26.2"
shapely = "2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
